--- a/main.html
+++ b/main.html
@@ -27,3 +27,8 @@
 		</canvas>
 	</body>
 </html>
+
+<!--
+	I CHOSE TO MAKE THIS NOT BECAUSE IT IS EASY BUT BECAUSE IT IS HARD.
+																- - - K.K.
+-->
